re PR c++/39242 (Inconsistent reject / accept of code)

2009-02-24  Richard Guenther  <rguenther@suse.de>

	PR c++/39242
	* pt.c (instantiate_decl): Do not instantiate extern, non-inline
	declared functions.

	* g++.dg/template/instantiate10.C: New testcase.

From-SVN: r144408